@startuml class
!theme plain
skinparam linetype ortho
skinparam roundcorner 10
skinparam shadowing false
skinparam class {
  BackgroundColor white
  BorderColor black
  ArrowColor black
}
skinparam package {
  BackgroundColor white
  BorderColor black
}

package "lib.domain" {
  class CreateUserReq {
    Email
    Username
    PasswordHash
  }

  class UserCredentials {
    UserID
    PasswordHash
    Role
  }
}

package "modules.user.repo.user" {
  interface "Repo" as UserRepoI {
    CreateUser()
    GetUserByID()
    UpdateProfile()
    Follow()
    Unfollow()
  }
}

package "modules.user.repo.user.postgres" {
  class UserRepo {
    db
    CreateUser()
    GetUserByID()
    UpdateProfile()
    Follow()
    Unfollow()
    GetCredentialsByEmail()
    GetCredentialsByID()
  }
}


package "modules.user.domain" {
  class User {
    ID
    Username
    DisplayName
    Description
    AvatarUrl
  }

  class UpdateProfileReq {
    Username
    DisplayName
    Description
  }
}

package "modules.user.service.user" {
  class "Service" as UserService {
    repo
    avatarsBaseURL
    GetUserByID()
    UpdateProfile()
    Follow()
    Unfollow()
  }
}

UserService *-- UserRepoI



package "modules.auth.domain" {
  class SignUpReq {
    Email
    Username
    Password
  }

  class SignInReq {
    Email
    Password
  }

  class SignInResp {
    AccessToken
    RefreshToken
  }

  class SignOutReq {
    RefreshToken
  }

  class RefreshReq {
    RefreshToken
  }

  class RefreshResp {
    AccessToken
    RefreshToken
  }

  class TokenClaims {
    UserID
    Role
  }
}

package "modules.auth.repo.user" {
  interface "Repo" as AuthUserRepoI {
    CreateUser()
    GetCredentialsByEmail()
    GetCredentialsByID()
  }
}

package "modules.auth.repo.token" {
  interface "Repo" as TokenRepoI {
    Set()
    Get()
    Delete()
  }
}

package "modules.auth.repo.token.redis" {
  class RefreshTokenRepo {
    redisClient
    Set()
    Get()
    Delete()
  }
}

RefreshTokenRepo ..|> TokenRepoI

package "modules.auth.service.token" {
  class "Service" as TokenService {
    refreshTokenRepo
    secret
    GenerateAccessToken()
    GenerateRefreshToken()
    ValidateAccessToken()
    ValidateRefreshToken()
    DeleteRefreshToken()
  }
}

TokenService *-- TokenRepoI

package "modules.auth.service.auth" {
  class "Service" as AuthService {
    userRepo
    hasher
    tokenSvc
    publisher
    SignUp()
    SignIn()
    SignOut()
    Refresh()
    ValidateAccessToken()
  }
}

AuthService *-- AuthUserRepoI
AuthService *-- TokenService

package "modules.auth.tool.hasher" {
  interface "Hasher" as HasherI {
    Hash()
    Compare()
  }
}

package "modules.auth.tool.hasher.bcrypt" {
  class "Hasher" as BcryptHasher {
    cost
    Hash()
    Compare()
  }
}

BcryptHasher ..|> HasherI
AuthService *-- HasherI

UserRepo ..|> UserRepoI
UserRepo ..|> AuthUserRepoI

package "modules.auth.metrics" {
  class AuthMetrics {
    AuthSignInTotal
  }
}

package "platform.http" {
  class Server {
    r
  }
}

package "platform.publisher.user" {
  class Publisher {
    writer
    Publish()
    Close()
  }

  class Event {
    EventID
    Type
    UserID
  }
}

AuthService *-- Publisher

package "main" {
  class App {
    ctx
    config
    db
    redisClient
    publisher
    authSvc
    userSvc
    server
  }

  class AppConfig {
    PostgresURL
    PostgresMigrationsDir
    RedisURL
    JWTSecret
    AvatarsBaseURL
    KafkaBrokers
    UserTopic
  }
}

App *-- AppConfig
App *-- Server
App *-- AuthService
App *-- UserService
App *-- Publisher

@enduml
